// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/channel_notifications_modal/ExpandView should match snapshot, DESKTOP on expanded view 1`] = `
<Connect(SettingItemMax)
  extraInfo={
    <ExtraInfo
      section="desktop"
    />
  }
  inputs={
    Array [
      <div>
        <fieldset>
          <div
            className="radio"
          >
            <label
              className=""
            >
              <input
                checked={false}
                id="channelNotificationGlobalDefault"
                name="channelDesktopNotifications"
                onChange={[Function]}
                type="radio"
                value="default"
              />
              <Describe
                globalNotifyLevel="default"
                memberNotifyLevel="default"
                section="desktop"
              />
            </label>
          </div>
          <div
            className="radio"
          >
            <label
              className=""
            >
              <input
                checked={true}
                id="channelNotificationAllActivity"
                name="channelDesktopNotifications"
                onChange={[Function]}
                type="radio"
                value="all"
              />
              <Describe
                memberNotifyLevel="all"
                section="desktop"
              />
            </label>
          </div>
          <div
            className="radio"
          >
            <label
              className=""
            >
              <input
                checked={false}
                id="channelNotificationMentions"
                name="channelDesktopNotifications"
                onChange={[Function]}
                type="radio"
                value="mention"
              />
              <Describe
                memberNotifyLevel="mention"
                section="desktop"
              />
            </label>
          </div>
          <div
            className="radio"
          >
            <label>
              <input
                checked={false}
                id="channelNotificationNever"
                name="channelDesktopNotifications"
                onChange={[Function]}
                type="radio"
                value="none"
              />
              <Describe
                memberNotifyLevel="none"
                section="desktop"
              />
            </label>
          </div>
        </fieldset>
      </div>,
    ]
  }
  server_error=""
  submit={[Function]}
  title={
    <SectionTitle
      section="desktop"
    />
  }
  updateSection={[Function]}
/>
`;

exports[`components/channel_notifications_modal/ExpandView should match snapshot, MARK_UNREAD on expanded view 1`] = `
<Connect(SettingItemMax)
  extraInfo={
    <ExtraInfo
      section="markUnread"
    />
  }
  inputs={
    Array [
      <div>
        <fieldset>
          <div
            className="radio"
          >
            <label
              className=""
            >
              <input
                checked={false}
                id="channelNotificationUnmute"
                name="channelNotificationMute"
                onChange={[Function]}
                type="radio"
                value="mention"
              />
              <Describe
                memberNotifyLevel="mention"
                section="markUnread"
              />
            </label>
          </div>
          <div
            className="radio"
          >
            <label
              className=""
            >
              <input
                checked={true}
                id="channelNotificationMute"
                name="channelNotificationMute"
                onChange={[Function]}
                type="radio"
                value="all"
              />
              <Describe
                memberNotifyLevel="all"
                section="markUnread"
              />
            </label>
          </div>
        </fieldset>
      </div>,
    ]
  }
  server_error=""
  submit={[Function]}
  title={
    <SectionTitle
      section="markUnread"
    />
  }
  updateSection={[Function]}
/>
`;

exports[`components/channel_notifications_modal/ExpandView should match snapshot, PUSH on expanded view 1`] = `
<Connect(SettingItemMax)
  extraInfo={
    <ExtraInfo
      section="push"
    />
  }
  inputs={
    Array [
      <div>
        <fieldset>
          <div
            className="radio"
          >
            <label
              className=""
            >
              <input
                checked={false}
                id="channelNotificationGlobalDefault"
                name="channelDesktopNotifications"
                onChange={[Function]}
                type="radio"
                value="default"
              />
              <Describe
                globalNotifyLevel="default"
                memberNotifyLevel="default"
                section="push"
              />
            </label>
          </div>
          <div
            className="radio"
          >
            <label
              className=""
            >
              <input
                checked={true}
                id="channelNotificationAllActivity"
                name="channelDesktopNotifications"
                onChange={[Function]}
                type="radio"
                value="all"
              />
              <Describe
                memberNotifyLevel="all"
                section="push"
              />
            </label>
          </div>
          <div
            className="radio"
          >
            <label
              className=""
            >
              <input
                checked={false}
                id="channelNotificationMentions"
                name="channelDesktopNotifications"
                onChange={[Function]}
                type="radio"
                value="mention"
              />
              <Describe
                memberNotifyLevel="mention"
                section="push"
              />
            </label>
          </div>
          <div
            className="radio"
          >
            <label>
              <input
                checked={false}
                id="channelNotificationNever"
                name="channelDesktopNotifications"
                onChange={[Function]}
                type="radio"
                value="none"
              />
              <Describe
                memberNotifyLevel="none"
                section="push"
              />
            </label>
          </div>
        </fieldset>
      </div>,
    ]
  }
  server_error=""
  submit={[Function]}
  title={
    <SectionTitle
      section="push"
    />
  }
  updateSection={[Function]}
/>
`;
